5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1716_2499.log
== TEST (2019-05-07 16:17:54) 
-- CODE:
from math import factorial()
print(factorial(2))
-- ERROR:
File "XXXX", line 1
    from math import factorial()
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:18:01) 
-- CODE:
from math import factorial
print(factorial(2))
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:50:03) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
if X == 1:
	print(1.0)
else:
	while X >= N:
		print(1+(1/factorial(n)))
		print(n+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(1+(1/factorial(n)))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:50:24) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
if X == 1:
	print(1.0)
else:
	while X >= N:
		print(1+(1/factorial(n)))
		n += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(1+(1/factorial(n)))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:50:27) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
if X == 1:
	print(1.0)
else:
	while X >= N:
		print(1+(1/factorial(n)))
		n += 1
-- EXECUTION TIME:
0.662958
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2499/main.py", line 9, in <module>
    print(1+(1/factorial(n)))
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:50:28) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
if X == 1:
	print(1.0)
else:
	while X >= N:
		print(1+(1/factorial(n)))
		n += 1
-- EXECUTION TIME:
0.488346
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2499/main.py", line 9, in <module>
    print(1+(1/factorial(n)))
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:50:28) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
if X == 1:
	print(1.0)
else:
	while X >= N:
		print(1+(1/factorial(n)))
		n += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(1+(1/factorial(n)))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:50:29) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
if X == 1:
	print(1.0)
else:
	while X >= N:
		print(1+(1/factorial(n)))
		n += 1
-- EXECUTION TIME:
0.421587
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2499/main.py", line 9, in <module>
    print(1+(1/factorial(n)))
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:50:34) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
if X == 1:
	print(1.0)
else:
	while X >= N:
		print(1+(1/factorial(n)))
		n += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(1+(1/factorial(n)))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:50:46) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
if X == 1:
	print(1.0)
else:
	while X >= N:
		print(1+(1/factorial(N)))
		N += 1
-- EXECUTION TIME:
0.480729
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.0
1.5
1.1666666666666667
1.0416666666666667
1.0083333333333333
1.0013888888888889
1.0001984126984127
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.0
1.5
1.1666666666666667
1.0416666666666667
1.0083333333333333
1.0013888888888889
1.0001984126984127
1.0000248015873017
1.0000027557319224
1.0000002755731923
1.0000000250521084
1.0000000020876756
1.0000000001605904
1.0000000000114708
1.0000000000007647
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.0
1.5
1.1666666666666667
1.0416666666666667
1.0083333333333333
1.0013888888888889
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:50:47) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
if X == 1:
	print(1.0)
else:
	while X >= N:
		print(1+(1/factorial(N)))
		N += 1
-- OUTPUT:
2.0
1.5
1.1666666666666667
1.0416666666666667
1.0083333333333333
1.0013888888888889
1.0001984126984127
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:50:48) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
if X == 1:
	print(1.0)
else:
	while X >= N:
		print(1+(1/factorial(N)))
		N += 1
-- EXECUTION TIME:
0.373547
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.0
1.5
1.1666666666666667
1.0416666666666667
1.0083333333333333
1.0013888888888889
1.0001984126984127
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.0
1.5
1.1666666666666667
1.0416666666666667
1.0083333333333333
1.0013888888888889
1.0001984126984127
1.0000248015873017
1.0000027557319224
1.0000002755731923
1.0000000250521084
1.0000000020876756
1.0000000001605904
1.0000000000114708
1.0000000000007647
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.0
1.5
1.1666666666666667
1.0416666666666667
1.0083333333333333
1.0013888888888889
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:52:02) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
if X == 1:
	print(1.0)
else:
	while X >= N:
		print(1+(1/factorial(N)))
		N += 1
-- OUTPUT:
2.0
1.5
1.1666666666666667
1.0416666666666667
1.0083333333333333
1.0013888888888889
1.0001984126984127
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:53:53) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
if X == 1:
	print(1.0)
else:
	while X >= N:
		p = 1
		q = (1/factorial(N))
		r = p + q
		print(round(r,8))
		N += 1
-- OUTPUT:
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:53:58) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
if X == 1:
	print(1.0)
else:
	while X >= N:
		p = 1
		q = (1/factorial(N))
		r = p + q
		print(round(r,8))
		N += 1
-- OUTPUT:
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:54:41) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
while X >= N:
		p = 1
		q = (1/factorial(N))
		r = p + q
		print(round(r,8))
		N += 1
-- OUTPUT:
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:54:54) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
while X >= N:
		p = 1
		q = (1/factorial(N))
		r = p + q
		print(round(r,8))
		N += 1
-- OUTPUT:
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:56:37) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
while X >= N:
		p = 1
		q = (1/factorial(N))
		r = p + q
		print(round(r,8))
		N += 1
-- OUTPUT:
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:56:53) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
while X >= N:
		p = 1
		q = (1/factorial(N))
		r = p + q
		print(round(r,8))
		N += N
-- OUTPUT:
2.0
1.5
1.04166667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:11:37) 
-- CODE:
from math import factorial

X = int(input(""))
N = 1
while X >= N:
		p = 1
		q = (1/factorial(N))
		r = p + q
		print(round(r,8))
		N += 1
-- OUTPUT:
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:53:23) 
-- CODE:
from math import factorial

k = int(input(""))
m = 1
while k >= m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		print(round(r,8))
		m += 1
-- OUTPUT:
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:53:24) 
-- CODE:
from math import factorial

k = int(input(""))
m = 1
while k >= m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		print(round(r,8))
		m += 1
-- OUTPUT:
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 22:53:24) 
-- CODE:
from math import factorial

k = int(input(""))
m = 1
while k >= m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		print(round(r,8))
		m += 1
-- EXECUTION TIME:
0.400469
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
1.00019841
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
1.00019841
1.0000248
1.00000276
1.00000028
1.00000003
1.0
1.0
1.0
1.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:53:27) 
-- CODE:
from math import factorial

k = int(input(""))
m = 1
while k >= m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		print(round(r,8))
		m += 1
-- OUTPUT:
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:53:35) 
-- CODE:
from math import factorial

k = int(input(""))
m = 0
while k >= m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		print(round(r,8))
		m += 1
-- OUTPUT:
2.0
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:53:53) 
-- CODE:
from math import factorial

k = int(input(""))
m = 0
while k > m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		print(round(r,8))
		m += 1
-- OUTPUT:
2.0
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:53:57) 
-- CODE:
from math import factorial

k = int(input(""))
m = 0
while k > m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		print(round(r,8))
		m += 1
-- OUTPUT:
2.0
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:53:59) 
-- CODE:
from math import factorial

k = int(input(""))
m = 0
while k > m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		print(round(r,8))
		m += 1
-- OUTPUT:
2.0
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:54:01) 
-- CODE:
from math import factorial

k = int(input(""))
m = 0
while k > m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		print(round(r,8))
		m += 1
-- OUTPUT:
2.0
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:54:03) 
-- CODE:
from math import factorial

k = int(input(""))
m = 0
while k > m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		print(round(r,8))
		m += 1
-- OUTPUT:
2.0
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:54:04) 
-- CODE:
from math import factorial

k = int(input(""))
m = 0
while k > m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		print(round(r,8))
		m += 1
-- OUTPUT:
2.0
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:54:06) 
-- CODE:
from math import factorial

k = int(input(""))
m = 0
while k > m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		print(round(r,8))
		m += 1
-- OUTPUT:
2.0
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:54:21) 
-- CODE:
from math import factorial

k = int(input(""))
m = 0
while k > m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		m += 1
		
print(round(r,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:54:25) 
-- CODE:
from math import factorial

k = int(input(""))
m = 0
while k > m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		m += 1
		
print(round(r,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:54:27) 
-- CODE:
from math import factorial

k = int(input(""))
m = 0
while k > m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		m += 1
		
print(round(r,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:54:29) 
-- CODE:
from math import factorial

k = int(input(""))
m = 0
while k > m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		m += 1
		
print(round(r,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 22:54:32) 
-- CODE:
from math import factorial

k = int(input(""))
m = 0
while k > m:
		p = 1
		q = (1/factorial(m))
		r = p + q
		m += 1
		
print(round(r,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:05:13) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k <= m:
	
	r = (1/factorial(m))
		
	m += 1
	
print(round(r,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(r,8))
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:05:25) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k <= m:
	
	r = (1/factorial(m))
		
	m += 1
	
	print(round(r,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(r,8))
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:05:39) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
		
	m += 1
	
print(round(r,8))
-- OUTPUT:
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 23:05:39) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
		
	m += 1
	
print(round(r,8))
-- EXECUTION TIME:
0.178443
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
0.00019841
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
0.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
0.00138889
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:05:42) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
		
	m += 1
	
print(round(r,8))
-- OUTPUT:
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:06:06) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	r += 1
		
	m += 1
	
print(round(r,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:06:10) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	r += 1
		
	m += 1
	
print(round(r,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:06:12) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	r += 1
		
	m += 1
	
print(round(r,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:06:13) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	r += 1
		
	m += 1
	
print(round(r,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:06:15) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	r += 1
		
	m += 1
	
print(round(r,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:06:42) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = 1+(1/factorial(m))
	r = r+r
		
	m += 1
	
print(round(r,8))
-- OUTPUT:
2.00039683
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:06:44) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = 1+(1/factorial(m))
	r = r+r
		
	m += 1
	
print(round(r,8))
-- OUTPUT:
2.00039683
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:06:47) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = 1+(1/factorial(m))
	
		
	m += 1
	
print(round(r,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:06:49) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = 1+(1/factorial(m))
	
		
	m += 1
	
print(round(r,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:06:52) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = 1+(1/factorial(m))
	
		
	m += 1
	
print(round(r,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:06:53) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = 1+(1/factorial(m))
	
		
	m += 1
	
print(round(r,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:08:26) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
		
	m += 1
	
	print(round(r,8))
-- OUTPUT:
1.0
1.0
0.5
0.16666667
0.04166667
0.00833333
0.00138889
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:08:43) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
		
	m += 1
	
	print(round(r,8))
print(round(r,8))
-- OUTPUT:
1.0
1.0
0.5
0.16666667
0.04166667
0.00833333
0.00138889
0.00019841
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:08:46) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
		
	m += 1
	
	print(round(r,8))
print(round(r,8))
-- OUTPUT:
1.0
1.0
0.5
0.16666667
0.04166667
0.00833333
0.00138889
0.00019841
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:09:25) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
		
	m += 1
	
	print(round(r,8))
print(round(r,8))
-- OUTPUT:
1.0
1.0
0.5
0.16666667
0.04166667
0.00833333
0.00138889
0.00019841
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:09:28) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
		
	m += 1
	
	print(round(r,8))
print(round(r,8))
-- OUTPUT:
1.0
1.0
0.5
0.16666667
0.04166667
0.00833333
0.00138889
0.00019841
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:11:44) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	print(round(s,8))
	print(round(r,8))
print(round(r,8))
print(round(s,8))
-- OUTPUT:
2.0
1.0
2.0
1.0
1.0
0.5
0.33333333
0.16666667
0.08333333
0.04166667
0.01666667
0.00833333
0.00277778
0.00138889
0.00039683
0.00019841
0.00019841
0.00039683
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:12:05) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print(round(r,8))
print(round(r,8))
-- OUTPUT:
1.0
1.0
0.5
0.16666667
0.04166667
0.00833333
0.00138889
0.00019841
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:12:15) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print(round(r,8))

print(round("a"r,8))
-- ERROR:
File "XXXX", line 17
    print(round("a"r,8))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:12:20) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print(round(r,8))

print(round("a",r,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round("a",r,8))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:12:30) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print(round(r,8))

print("a,"round(r,8))
-- ERROR:
File "XXXX", line 17
    print("a,"round(r,8))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:12:40) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print(round(r,8))
print("")
print(round(r,8))
-- OUTPUT:
1.0
1.0
0.5
0.16666667
0.04166667
0.00833333
0.00138889
0.00019841

0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:12:43) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print(round(r,8))
print("")
print(round(r,8))
-- OUTPUT:
1.0
1.0
0.5
0.16666667
0.04166667
0.00833333
0.00138889
0.00019841

0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:12:52) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print(round(s,8))
print("")
print(round(r,8))
-- OUTPUT:
2.0
2.0
1.0
0.33333333
0.08333333
0.01666667
0.00277778
0.00039683

0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:13:00) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print(round(s,8))
print("")
print(round(r,8))
-- OUTPUT:
2.0
2.0
1.0
0.33333333
0.08333333
0.01666667
0.00277778
0.00039683

0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:13:54) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print(round(s,8))
	print("")
	print(round(r,8))
print("")
print(round(r,8))
-- OUTPUT:
2.0

1.0
2.0

1.0
1.0

0.5
0.33333333

0.16666667
0.08333333

0.04166667
0.01666667

0.00833333
0.00277778

0.00138889
0.00039683

0.00019841

0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:14:20) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print("a:",8)
print("")
print(round(r,8))
-- OUTPUT:
a: 8
a: 8
a: 8
a: 8
a: 8
a: 8
a: 8
a: 8

0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:14:48) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print("a:",r)
print("")
print("v:",r)
-- OUTPUT:
a: 1.0
a: 1.0
a: 0.5
a: 0.16666666666666666
a: 0.041666666666666664
a: 0.008333333333333333
a: 0.001388888888888889
a: 0.0001984126984126984

v: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:14:52) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print("a:",r)
print("")
print("v:",r)
-- OUTPUT:
a: 1.0
a: 1.0
a: 0.5
a: 0.16666666666666666
a: 0.041666666666666664
a: 0.008333333333333333
a: 0.001388888888888889
a: 0.0001984126984126984

v: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:15:05) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print("a:",s)
print("")
print("v:",r)
-- OUTPUT:
a: 2.0
a: 2.0
a: 1.0
a: 0.3333333333333333
a: 0.08333333333333333
a: 0.016666666666666666
a: 0.002777777777777778
a: 0.0003968253968253968

v: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:15:36) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	print("v:",r)
	s = r+r
	print("r:",s)
	m += 1
	
	print("a:",s)
print("")
print("hg:",r)
-- OUTPUT:
v: 1.0
r: 2.0
a: 2.0
v: 1.0
r: 2.0
a: 2.0
v: 0.5
r: 1.0
a: 1.0
v: 0.16666666666666666
r: 0.3333333333333333
a: 0.3333333333333333
v: 0.041666666666666664
r: 0.08333333333333333
a: 0.08333333333333333
v: 0.008333333333333333
r: 0.016666666666666666
a: 0.016666666666666666
v: 0.001388888888888889
r: 0.002777777777777778
a: 0.002777777777777778
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968

hg: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:15:39) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(m))
	print("v:",r)
	s = r+r
	print("r:",s)
	m += 1
	
	print("a:",s)
print("")
print("hg:",r)
-- OUTPUT:
v: 1.0
r: 2.0
a: 2.0
v: 1.0
r: 2.0
a: 2.0
v: 0.5
r: 1.0
a: 1.0
v: 0.16666666666666666
r: 0.3333333333333333
a: 0.3333333333333333
v: 0.041666666666666664
r: 0.08333333333333333
a: 0.08333333333333333
v: 0.008333333333333333
r: 0.016666666666666666
a: 0.016666666666666666
v: 0.001388888888888889
r: 0.002777777777777778
a: 0.002777777777777778
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968

hg: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:16:54) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(k))
	print("v:",r)
	s = r+r
	print("r:",s)
	m += 1
	
	print("a:",s)
print("")
print("hg:",r)
-- OUTPUT:
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968

hg: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:16:57) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(k))
	print("v:",r)
	s = r+r
	print("r:",s)
	m += 1
	
	print("a:",s)
print("")
print("hg:",r)
-- OUTPUT:
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968

hg: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:17:28) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(k))
	print("v:",r)
	s = r+r
	print("r:",s)
	m += 1
	
	print("a:",s)
print("")
print("hg:",r)
-- OUTPUT:
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968

hg: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:17:30) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(k))
	print("v:",r)
	s = r+r
	print("r:",s)
	m += 1
	
	print("a:",s)
print("")
print("hg:",r)
-- OUTPUT:
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968

hg: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:17:39) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(k))
	print("v:",r)
	s = r+r
	print("r:",s)
	m += 1
	
	print("a:",s)
print("")
print("hg:",r)
-- OUTPUT:
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968

hg: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:17:53) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(k))
	print("v:",r)
	s = r+r
	print("r:",s)
	m += 1
	
	print("a:",s)
print("")
print("hg:",r)
-- OUTPUT:
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968
v: 0.0001984126984126984
r: 0.0003968253968253968
a: 0.0003968253968253968

hg: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:18:14) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while k >= m:
	
	r = (1/factorial(k))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",r)
-- OUTPUT:
r: 0.0001984126984126984
s: 0.0003968253968253968
s1: 0.0003968253968253968
r: 0.0001984126984126984
s: 0.0003968253968253968
s1: 0.0003968253968253968
r: 0.0001984126984126984
s: 0.0003968253968253968
s1: 0.0003968253968253968
r: 0.0001984126984126984
s: 0.0003968253968253968
s1: 0.0003968253968253968
r: 0.0001984126984126984
s: 0.0003968253968253968
s1: 0.0003968253968253968
r: 0.0001984126984126984
s: 0.0003968253968253968
s1: 0.0003968253968253968
r: 0.0001984126984126984
s: 0.0003968253968253968
s1: 0.0003968253968253968
r: 0.0001984126984126984
s: 0.0003968253968253968
s1: 0.0003968253968253968

hg: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:29:28) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",r)
-- OUTPUT:
r: 1.0
s: 1.0
s1: 1.0
r: 1.0
s: 1.0
s1: 1.0
r: 0.5
s: 0.5
s1: 0.5
r: 0.16666666666666666
s: 0.16666666666666666
s1: 0.16666666666666666
r: 0.041666666666666664
s: 0.041666666666666664
s1: 0.041666666666666664
r: 0.008333333333333333
s: 0.008333333333333333
s1: 0.008333333333333333
r: 0.001388888888888889
s: 0.001388888888888889
s1: 0.001388888888888889
r: 0.0001984126984126984
s: 0.0001984126984126984
s1: 0.0001984126984126984

hg: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 23:29:31) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",r)
-- EXECUTION TIME:
0.280339
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
r: 1.0
s: 1.0
s1: 1.0
r: 1.0
s: 1.0
s1: 1.0
r: 0.5
s: 0.5
s1: 0.5
r: 0.16666666666666666
s: 0.16666666666666666
s1: 0.16666666666666666
r: 0.041666666666666664
s: 0.041666666666666664
s1: 0.041666666666666664
r: 0.008333333333333333
s: 0.008333333333333333
s1: 0.008333333333333333
r: 0.001388888888888889
s: 0.001388888888888889
s1: 0.001388888888888889
r: 0.0001984126984126984
s: 0.0001984126984126984
s1: 0.0001984126984126984

hg: 0.0001984126984126984
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
r: 1.0
s: 1.0
s1: 1.0
r: 1.0
s: 1.0
s1: 1.0
r: 0.5
s: 0.5
s1: 0.5
r: 0.16666666666666666
s: 0.16666666666666666
s1: 0.16666666666666666
r: 0.041666666666666664
s: 0.041666666666666664
s1: 0.041666666666666664
r: 0.008333333333333333
s: 0.008333333333333333
s1: 0.008333333333333333
r: 0.001388888888888889
s: 0.001388888888888889
s1: 0.001388888888888889
r: 0.0001984126984126984
s: 0.0001984126984126984
s1: 0.0001984126984126984
r: 2.48015873015873e-05
s: 2.48015873015873e-05
s1: 2.48015873015873e-05
r: 2.7557319223985893e-06
s: 2.7557319223985893e-06
s1: 2.7557319223985893e-06
r: 2.755731922398589e-07
s: 2.755731922398589e-07
s1: 2.755731922398589e-07
r: 2.505210838544172e-08
s: 2.505210838544172e-08
s1: 2.505210838544172e-08
r: 2.08767569878681e-09
s: 2.08767569878681e-09
s1: 2.08767569878681e-09
r: 1.6059043836821613e-10
s: 1.6059043836821613e-10
s1: 1.6059043836821613e-10
r: 1.1470745597729725e-11
s: 1.1470745597729725e-11
s1: 1.1470745597729725e-11
r: 7.647163731819816e-13
s: 7.6471
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
r: 1.0
s: 1.0
s1: 1.0
r: 1.0
s: 1.0
s1: 1.0
r: 0.5
s: 0.5
s1: 0.5
r: 0.16666666666666666
s: 0.16666666666666666
s1: 0.16666666666666666
r: 0.041666666666666664
s: 0.041666666666666664
s1: 0.041666666666666664
r: 0.008333333333333333
s: 0.008333333333333333
s1: 0.008333333333333333
r: 0.001388888888888889
s: 0.001388888888888889
s1: 0.001388888888888889

hg: 0.001388888888888889
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:29:33) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",r)
-- OUTPUT:
r: 1.0
s: 1.0
s1: 1.0
r: 1.0
s: 1.0
s1: 1.0
r: 0.5
s: 0.5
s1: 0.5
r: 0.16666666666666666
s: 0.16666666666666666
s1: 0.16666666666666666
r: 0.041666666666666664
s: 0.041666666666666664
s1: 0.041666666666666664
r: 0.008333333333333333
s: 0.008333333333333333
s1: 0.008333333333333333
r: 0.001388888888888889
s: 0.001388888888888889
s1: 0.001388888888888889
r: 0.0001984126984126984
s: 0.0001984126984126984
s1: 0.0001984126984126984

hg: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:31:26) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+s
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    s = r+s
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:31:31) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",r)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778
r: 0.0001984126984126984
s: 0.0003968253968253968
s1: 0.0003968253968253968

hg: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:31:34) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",r)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778
r: 0.0001984126984126984
s: 0.0003968253968253968
s1: 0.0003968253968253968

hg: 0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:16) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k-1:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",r)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778

hg: 0.001388888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:18) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k-1:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",r)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778

hg: 0.001388888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:21) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k-1:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",r)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778

hg: 0.001388888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 23:32:24) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k-1:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",r)
-- EXECUTION TIME:
0.147617
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778

hg: 0.001388888888888889
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778
r: 0.0001984126984126984
s: 0.0003968253968253968
s1: 0.0003968253968253968
r: 2.48015873015873e-05
s: 4.96031746031746e-05
s1: 4.96031746031746e-05
r: 2.7557319223985893e-06
s: 5.5114638447971785e-06
s1: 5.5114638447971785e-06
r: 2.755731922398589e-07
s: 5.511463844797178e-07
s1: 5.511463844797178e-07
r: 2.505210838544172e-08
s: 5.010421677088344e-08
s1: 5.010421677088344e-08
r: 2.08767569878681e-09
s: 4.17535139757362e-09
s1: 4.17535139757362e-09
r: 1.6059043836821613e-10
s: 3.2118087673643227e-10
s1: 3.2118087673643227e-10
r: 1.1470745597729725e-11
s: 2.294149119545945e-11
s1: 2.294149119545945e-11

hg: 1.1470745597729725e-11
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666

hg: 0.008333333333333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:26) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k-1:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",r)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778

hg: 0.001388888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:37) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k-1:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",s)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778

hg: 0.002777777777777778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:40) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k-1:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",s)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778

hg: 0.002777777777777778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:48) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k-1:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",s)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778

hg: 0.002777777777777778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:50) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k-1:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",s)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778

hg: 0.002777777777777778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:52) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k-1:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",s)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778

hg: 0.002777777777777778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:53) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k-1:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",s)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778

hg: 0.002777777777777778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:55) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k-1:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",s)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778

hg: 0.002777777777777778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:56) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k-1:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",s)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778

hg: 0.002777777777777778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:32:58) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k-1:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",s)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778

hg: 0.002777777777777778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 23:33:00) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k-1:
	# r somar k vezes
	r = (1/factorial(m))
	print("r:",r)
	s = r+r
	print("s:",s)
	m += 1
	
	print("s1:",s)
print("")
print("hg:",s)
-- OUTPUT:
r: 1.0
s: 2.0
s1: 2.0
r: 1.0
s: 2.0
s1: 2.0
r: 0.5
s: 1.0
s1: 1.0
r: 0.16666666666666666
s: 0.3333333333333333
s1: 0.3333333333333333
r: 0.041666666666666664
s: 0.08333333333333333
s1: 0.08333333333333333
r: 0.008333333333333333
s: 0.016666666666666666
s1: 0.016666666666666666
r: 0.001388888888888889
s: 0.002777777777777778
s1: 0.002777777777777778

hg: 0.002777777777777778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:11:20) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k:
	# r somar k vezes
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print(s)

print(s)
-- OUTPUT:
2.0
2.0
1.0
0.3333333333333333
0.08333333333333333
0.016666666666666666
0.002777777777777778
0.0003968253968253968
0.0003968253968253968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:11:22) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k:
	# r somar k vezes
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print(s)

print(s)
-- OUTPUT:
2.0
2.0
1.0
0.3333333333333333
0.08333333333333333
0.016666666666666666
0.002777777777777778
0.0003968253968253968
0.0003968253968253968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:11:25) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while m <= k:
	# r somar k vezes
	r = (1/factorial(m))
	
	s = r+r
	
	m += 1
	
	print(s)

print(s)
-- OUTPUT:
2.0
2.0
1.0
0.3333333333333333
0.08333333333333333
0.016666666666666666
0.002777777777777778
0.0003968253968253968
0.0003968253968253968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:15:45) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while (m <= k):
	# somar r, k vezes
	r = (1/factorial(m))
	
	m += 1
	
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(s)
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:16:52) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while (m <= k):
	# somar r, k vezes
	r = (1/factorial(m))
	
	m += 1
	
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(s)
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:16:56) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while (m <= k):
	# somar r, k vezes
	r = (1/factorial(m))
	
	m += 1
	
	print(r)
-- OUTPUT:
1.0
1.0
0.5
0.16666666666666666
0.041666666666666664
0.008333333333333333
0.001388888888888889
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:17:00) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while (m <= k):
	# somar r, k vezes
	r = (1/factorial(m))
	
	m += 1
	
	print(r)
-- OUTPUT:
1.0
1.0
0.5
0.16666666666666666
0.041666666666666664
0.008333333333333333
0.001388888888888889
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:17:03) 
-- CODE:
from math import factorial

k = int(input(""))

m = 0

while (m <= k):
	# somar r, k vezes
	r = (1/factorial(m))
	
	m += 1
	
	print(r)
-- OUTPUT:
1.0
1.0
0.5
0.16666666666666666
0.041666666666666664
0.008333333333333333
0.001388888888888889
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:17:55) 
-- CODE:
from math import factorial

k = int(input("um numero natural: "))

m = 0

while (m <= k):
	# somar r, k vezes
	r = (1/factorial(m))
	
	m += 1
	
print(r)
-- OUTPUT:
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:18:09) 
-- CODE:
from math import factorial

k = int(input("um numero natural: "))

m = 0

while (m <= k):
	# somar r, k vezes
	r = (1/factorial(m))
	
	m += 1
	
print(r)
-- OUTPUT:
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:18:16) 
-- CODE:
from math import factorial

k = int(input("um numero natural: "))

m = 0

while (m <= k):
	# somar r, k vezes
	r = (1/factorial(m))
	
	m += 1
	
print(r)
-- OUTPUT:
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:18:58) 
-- CODE:
from math import factorial

k = int(input("um numero natural: "))

m = 0

while (m <= k):
	# somar r, k vezes
	r = (1/factorial(m))
	
	m += 1
	
print(r)
-- OUTPUT:
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:19:03) 
-- CODE:
from math import factorial

k = int(input("um numero natural: "))

m = 0

while (m <= k):
	# somar r, k vezes
	r = (1/factorial(m))
	
	m += 1
	
print(r)
-- OUTPUT:
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:20:54) 
-- CODE:
from math import factorial

k = int(input("um numero natural: "))

m = 0
r = 0

while (m <= k):
	# somar r, k vezes
	r = r + (1/factorial(m))
	
	m += 1
	
print(r)
-- OUTPUT:
2.7182539682539684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:21:14) 
-- CODE:
from math import factorial

k = int(input("um numero natural: "))

m = 0
r = 0

while (m < k):
	# somar r, k vezes
	r = r + (1/factorial(m))
	
	m += 1
	
print(r)
-- OUTPUT:
2.7180555555555554
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:21:17) 
-- CODE:
from math import factorial

k = int(input("um numero natural: "))

m = 0
r = 0

while (m < k):
	# somar r, k vezes
	r = r + (1/factorial(m))
	
	m += 1
	
print(r)
-- OUTPUT:
2.7180555555555554
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:21:29) 
-- CODE:
from math import factorial

k = int(input("um numero natural: "))

m = 0
r = 0

while (m < k):
	# somar r, k vezes
	r = r + (1/factorial(m))
	
	m += 1
	
print(round(r,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:21:31) 
-- CODE:
from math import factorial

k = int(input("um numero natural: "))

m = 0
r = 0

while (m < k):
	# somar r, k vezes
	r = r + (1/factorial(m))
	
	m += 1
	
print(round(r,8))
-- EXECUTION TIME:
0.1676
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 20:21:38) 
-- CODE:
from math import factorial

k = int(input("um numero natural k: "))

m = 0 # variavel contadora
r = 0 # variavel acumuladora

while (m < k): # somar r, k vezes
	
	r += (1/factorial(m))
	
	m += 1
	
print(round(r,8))
-- EXECUTION TIME:
0.175811
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 20:46:22) 
-- CODE:
from math import factorial

k = int(input("um numero natural k: "))

m = 0 # variavel contadora
r = 0 # variavel acumuladora

while (m < k): # somar r, k vezes
	
	r += (1/factorial(m))
	
	m += 1
	
print(round(r,8))
-- EXECUTION TIME:
0.178516
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:42:24) 
-- CODE:
from math import factorial

k = int(input("um numero natural k: "))

m = 0 # variavel contadora
r = 0 # variavel acumuladora

while (m < k): # somar r, k vezes
	
	r += (1/factorial(m))
	
	m += 1
	
print(round(r,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
